@@ -1,10 +1,10 @@
-<html metal:define-macro="master">
+<html metal:define-macro="page">
 <head>
 <metal:block define-slot="css_slot">
 </metal:block>
 </head>
 <body>
-<metal:block define-slot="main">
+<metal:block define-slot="body">
 </metal:block>
 </body>
 </html>
